--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<h1>this is my first test page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Name - Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 20px;
+      background: #f4f4f4;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h1, h2 {
+      color: #333;
+    }
+
+    h1 {
+      border-bottom: 2px solid #333;
+      padding-bottom: 5px;
+    }
+
+    .section {
+      margin-bottom: 20px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Your Name</h1>
+    <p>Email: <a href="mailto:your@email.com">your@email.com</a> | 
+       GitHub: <a href="https://github.com/yourusername">yourusername</a> | 
+       LinkedIn: <a href="https://linkedin.com/in/yourusername">yourusername</a></p>
+
+    <div class="section">
+      <h2>Summary</h2>
+      <p>A brief summary of your skills, background, and what you’re looking for.</p>
+    </div>
+
+    <div class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming: JavaScript, Python, HTML, CSS</li>
+        <li>Frameworks: React, Node.js, Django</li>
+        <li>Tools: Git, Docker, VS Code</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Experience</h2>
+      <h3>Software Developer - Company Name</h3>
+      <p><em>Jan 2022 – Present</em></p>
+      <ul>
+        <li>Developed modern web applications using React and Node.js</li>
+        <li>Collaborated with cross-functional teams</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Education</h2>
+      <h3>University Name</h3>
+      <p><em>Bachelor of Science in Computer Science, 2020</em></p>
+    </div>
+  </div>
+</body>
+</html>
